force-app/main/default/objects/Users_of_Tool__c/Users_of_Tool__c.object-meta.xml
<CustomObject>
    <label>Users of Tool</label>
    <nameField>
        <displayFormat>UoT-{000000}</displayFormat>
        <label>Users of Tools Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Users of Tools</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>