force-app/main/default/objects/Users_of_Tool__c/fields/User_Information__c.field-meta.xml
<CustomField>
    <fullName>User_Information__c</fullName>
    <formula>User_Record_Id__r.FirstName + &quot; &quot; + User_Record_Id__r.LastName + BR() 
+ &quot;Title : &quot; + User_Record_Id__r.Title + BR() 
+ &quot;Division : &quot; + User_Record_Id__r.Division + BR() 
+ &quot;Manager : &quot; + User_Record_Id__r.Manager.FirstName + &quot; &quot; + User_Record_Id__r.Manager.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>User Information</label>
    <type>Text</type>
</CustomField>