force-app/main/default/objects/Users_of_Tool__c/fields/User_Record_Id__c.field-meta.xml
<CustomField>
    <fullName>User_Record_Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User Record Id</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Users_of_Tools</relationshipName>
    <type>Lookup</type>
</CustomField>