force-app/main/default/objects/Users_of_Tool__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>User_Information__c</columns>
    <columns>NAME</columns>
    <columns>User_Id__c</columns>
    <columns>OBJECT_ID</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>